Add reflection parameters to remote server startups